[gd_scene load_steps=3 format=3 uid="uid://ebt35jjk5feh"]

[ext_resource type="Script" uid="uid://c1onfhkarb3pr" path="res://src/level/main_floor/level_tile_map_layers.gd" id="1_h25yc"]
[ext_resource type="TileSet" uid="uid://26wcy33gmwrh" path="res://src/tile_sets/main_floor.tres" id="3_cokuq"]

[node name="LevelTileMapLayers" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_h25yc")

[node name="FloorLayer" type="TileMapLayer" parent="."]
z_index = -2
tile_set = ExtResource("3_cokuq")
occlusion_enabled = false
collision_enabled = false
navigation_enabled = false

[node name="WallLayer" type="TileMapLayer" parent="."]
light_mask = 6
z_index = -1
tile_set = ExtResource("3_cokuq")
navigation_enabled = false

[node name="WallTopLayer" type="TileMapLayer" parent="."]
light_mask = 4
y_sort_enabled = true
tile_set = ExtResource("3_cokuq")
collision_enabled = false
navigation_enabled = false

[node name="WallCapLayer" type="TileMapLayer" parent="."]
light_mask = 6
z_index = -1
tile_set = ExtResource("3_cokuq")
occlusion_enabled = false
collision_enabled = false
navigation_enabled = false

[node name="PropLayer" type="TileMapLayer" parent="."]
light_mask = 6
y_sort_enabled = true
tile_set = ExtResource("3_cokuq")
navigation_enabled = false
